--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EXPOSED_URL="https://7379-130-245-192-1.ngrok-free.app"
+EXPOSED_URL="https://c256-130-245-192-1.ngrok-free.app"
 USE_WEBHOOK="true"
